tests/tst/errors/InvalidConfig.php
<?php
/**
 * @package axy\errors
 */

namespace axy\errors\tests\tst\errors;

class InvalidConfig extends \axy\errors\InvalidConfig implements Error
{
}
